# Data_Science_Agent

./: .adkignore  .gitignore  14_STAGE_SEQUENTIAL_WORKFLOW_FIXED.md  ADK_ARTIFACT_BEST_PRACTICES.md  ADK_ARTIFACT_INTEGRATION_PLAN.md  ADK_PLACEHOLDER_GUIDE.md  ALL_TOOLS_FIXED.md  ALL_TOOLS_FIXED_COMPLETE.md  ALL_TOOLS_UI_FIX_COMPLETE.md  ARTIFACT_RESULTS_FIX.md  ASYNC_WRAPPER_FIX_SELECT_FEATURES.md  CODE_OF_CONDUCT.md  COMPLETE_RESULTS_FIX.md  COMPLETE_SESSION_SUMMARY.md  COMPREHENSIVE_ASYNC_CALLBACK_FIX.md  COMPREHENSIVE_CHECK_REPORT.md  CONTRIBUTING.md  CRITICAL_FIX_ASYNC_GENERATOR_SERIALIZATION.md  CRITICAL_FIX_CALLBACK_RETURN_VALUE.md  CRITICAL_FIX_RETURN_NONE_PATTERN.md  CRITICAL_FIX_WRONG_DATASET_BEING_ANALYZED.md  DATABASE_SESSION_ADOPTED.md  DEBUG_ASYNC_SYNC.md  DEEP_ASYNC_GENERATOR_DETECTION.md  DIAGNOSTIC_FIX.md  ENV_CONFIG_GUIDE.md  FINAL_FIX_CALLBACK_RETURN_NONE.md  FINAL_SYSTEM_STATUS.md  FIXED_TOOLS_SUMMARY.md  FIXES_ANALYZE_AND_LOGGING.md  FIX_ANALYZE_DATASET_NO_RESULTS_DISPLAY.md  FIX_DATABASE_ENV.md  FIX_SUMMARY_ALL_TOOLS.md  FIX_WINDOWS_ENV.md  GUILLAUME_ARTICLE_ADOPTION.md  HOW_TO_TEST_THE_FIX.md  LICENSE  ORGANIZATION.md  README.md  REPORT_MODEL_RESULTS.md  (+37 more)
data_science/: ADK_COMPLIANCE_VERIFICATION.md  ALL_TOOLS_COVERAGE_PROOF.md  ARTIFACT_DISPLAY_AND_SERIALIZATION.md  ARTIFACT_FIX_SUMMARY.md  ARTIFACT_MANAGER_ANALYSIS.md  ARTIFACT_MANAGER_CONFIGURATION.md  ASYNC_SYNC_FIXES.md  AUTO_CLEANUP_UPLOADED_FILES.md  CLEANUP_CODE_EXPLANATION.md  COMPLETE_ARTIFACT_FALLBACK_SOLUTION.md  COMPLETE_FIX_SUMMARY.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPREHENSIVE_FIX_404_AND_FOLDERS.md  CONTEXT_WINDOW_MANAGEMENT.md  CRITICAL_BUGS_FIXED.md  CRITICAL_BUG_FIXED_WORKSPACE_MISMATCH.md  CRITICAL_FIX_INFINITE_COPY_LOOP.md  CRITICAL_MULTIPLE_WORKSPACES_STILL_HAPPENING.md  DATABASE_SESSION_SERVICE.md  FINAL_FIX_WORKSPACE_DUPLICATION.md  FIXES_APPLIED_SUMMARY.md  FIX_404_ERROR_MARKDOWN_ARTIFACTS.md  FIX_AUTO_DISCOVERY_CHAOS.md  FIX_ONE_FOLDER_PER_DATASET_APPLIED.md  (+128 more)
(+511 files in other folders)
